@@ -12,8 +12,9 @@ begin
     gem.authors = ["Rodolfo Liviero"]
     
     gem.add_dependency "thor", ">=0.13.7"
-	gem.add_dependency "rake", ">=0.8.7"
-	gem.add_dependency "activesupport", ">=2.3.8"
+	  gem.add_dependency "rake", ">=0.8.7"
+  	gem.add_dependency "activesupport", ">=2.3.8"
+	  gem.add_dependency "bundler", ">=1.0.0.beta.2"
 	
   	gem.post_install_message = "Thank you for installing vraptor-scaffold. Please read http://github.com/rodolfoliviero/vraptor-scaffold/blob/master/README.rdoc for more information."
   end
