@@ -76,14 +76,14 @@ Gem::Specification.new do |s|
   s.rubygems_version = %q{1.3.7}
   s.summary = %q{Scaffold for vraptor 3.}
   s.test_files = [
-    "spec/spec_helper.rb",
+    "spec/lib/vraptor-scaffold_spec.rb",
      "spec/lib/generators/app_generator/app_generator_spec.rb",
-     "spec/lib/generators/attribute_spec.rb",
+     "spec/lib/generators/scaffold_generator/controller_generator/controller_generator_spec.rb",
+     "spec/lib/generators/scaffold_generator/scaffold_generator_spec.rb",
      "spec/lib/generators/scaffold_generator/model_generator/model_generator_spec.rb",
      "spec/lib/generators/scaffold_generator/freemarker_generator/freemarker_generator_spec.rb",
-     "spec/lib/generators/scaffold_generator/scaffold_generator_spec.rb",
-     "spec/lib/generators/scaffold_generator/controller_generator/controller_generator_spec.rb",
-     "spec/lib/vraptor-scaffold_spec.rb"
+     "spec/lib/generators/attribute_spec.rb",
+     "spec/spec_helper.rb"
   ]
 
   if s.respond_to? :specification_version then
@@ -94,15 +94,18 @@ Gem::Specification.new do |s|
       s.add_runtime_dependency(%q<thor>, [">= 0.13.7"])
       s.add_runtime_dependency(%q<rake>, [">= 0.8.7"])
       s.add_runtime_dependency(%q<activesupport>, [">= 2.3.8"])
+      s.add_runtime_dependency(%q<bundler>, [">= 1.0.0.beta.2"])
     else
       s.add_dependency(%q<thor>, [">= 0.13.7"])
       s.add_dependency(%q<rake>, [">= 0.8.7"])
       s.add_dependency(%q<activesupport>, [">= 2.3.8"])
+      s.add_dependency(%q<bundler>, [">= 1.0.0.beta.2"])
     end
   else
     s.add_dependency(%q<thor>, [">= 0.13.7"])
     s.add_dependency(%q<rake>, [">= 0.8.7"])
     s.add_dependency(%q<activesupport>, [">= 2.3.8"])
+    s.add_dependency(%q<bundler>, [">= 1.0.0.beta.2"])
   end
 end
 
