@@ -3,6 +3,8 @@
   * Bumped vraptor version to 3.1.3.
   * Change views directory from WEB-INF/freemarker to WEB-INF/views.
   * Change hsqldb to use file insted of memory.
+  * Fixed pom when creating project with path like /home/rodolfo/project.
+  * Fixed runtime dependencies.
 
 == 0.0.1.beta2 / 2010-07-07
 
